--- a/hackathon_01_coban/css/HN_JV230630_DuongVietAnh.css
+++ b/hackathon_01_coban/css/HN_JV230630_DuongVietAnh.css
@@ -47,6 +47,7 @@ main .main_box {
 
 main .box {
     position: relative;
+    height: 330px;
 }
 
 main .box .line {
@@ -62,13 +63,16 @@ main .box .line {
 main .box img {
     width: 300px;
     height: 200px;
+    border-top: 7px solid rgba(255, 191, 58, 0.78);
 }
 main .box .box_text{
     margin: 10px 0;
 }
 main .box .box_text p{
-    margin: 10px 0;
+    margin: 20px 0;
     font-weight: bold;
     width: 300px;
-
+}
+main .box .box_text h2{
+    margin: 15px 0;
 }
